Добавлена публикация событий обработки аватаров
